Name:           hlibs
Version:        0.0.1
Cabal-Version:  >= 1.8
Author:         Harold Lee

Library
  Build-Depends:    base, containers, multimap, matrix, sparse-lin-alg, parsec, HUnit
  Exposed-Modules:  Algorithms.PageRank, Algorithms.SparsePageRank, Algorithms.MakeChange
  Language:         Haskell2010