Name:           hlibs
Version:        0.0.1
Cabal-Version:  >= 1.8
Author:         Harold Lee

Library
  Build-Depends:    base, containers, multimap, matrix, sparse-lin-alg, parsec, HUnit
  Exposed-Modules:  Algorithms.MakeChange,
                    Algorithms.PageRank,
                    Algorithms.SparsePageRank
  GHC-Options:      -Wall
