Name:                log2json
Version:             0.1
Description:         Take an httpd.conf style LogFormat string and parse a
                     log file into JSON records.
License:             GPL
License-file:        gpl.txt
Author:              harold@hotelling.net
Maintainer:          harold@hotelling.net
Category:            JSON, Text, Utils, Tools
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable log2json
  Main-is:           Main.hs
  Build-Depends:     base, containers, parsec, json